Modify auth data entity

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=dummy
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.show-sql:true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
