--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8000
 
 # Configuration for MySQL Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://localhost:3306/user_auth_db
+spring.datasource.url = jdbc:mysql://172.17.0.3:3306/user_auth_db
 spring.datasource.username=root
-spring.datasource.password=dummy
+spring.datasource.password=m1s9c9r7
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.show-sql:true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
