--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-server.port=8000
+server.port                                                         =8000
 
 # Configuration for MySQL Database
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url = jdbc:mysql://172.17.0.3:3306/user_auth_db
-spring.datasource.username=root
-spring.datasource.password=m1s9c9r7
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.show-sql:true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto                                       =update
+spring.datasource.url                                               = jdbc:mysql://172.17.0.3:3306/user_auth_db
+spring.datasource.username                                          =root
+spring.datasource.password                                          =m1s9c9r7
+spring.datasource.driverClassName                                   =com.mysql.jdbc.Driver
+spring.jpa.show-sql                                                 =true
+spring.jpa.properties.hibernate.dialect                             =org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation    =true
